more styling. added border to separate accordion and about paragraph, changed color scheme on home page, added images to home page.

--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -1,5 +1,5 @@
 body {
-    background-color: rgb(252, 220, 215);
+    background-color:#027353;
     /* Replace with your desired background color */
     margin: 0;
     padding: 0;
