--- a/src/components/About/AboutAccordion.css
+++ b/src/components/About/AboutAccordion.css
@@ -1,12 +1,12 @@
-* {
+/* * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   border-color: whitesmoke;
-}
+} */
 
   body { 
-    background-color: rgb(255, 216, 209);
+    background-color: #FCEDDA;
 
   } 
 
@@ -19,9 +19,10 @@ h1 {
   max-width: 400px;
   margin: 2rem auto;
   margin-top: 35px;
-  /* border: 10px solid lightblue; */
+  border-left: 2px solid #f2ffb2;
   margin-bottom: 50px;
   padding: 25px;
+  margin-left: -35px;
 }
 
 .accordion-title {
@@ -34,7 +35,7 @@ h1 {
 }
 
 .accordion-title:hover {
-  background-color: rgb(255, 216, 209);
+  background-color: #f2ffb2;
   ;
 }
 
@@ -44,7 +45,7 @@ h1 {
 }
 
 .accordion-content {
-  background-color: rgb(255, 216, 209);
+  background-color:#f2ffb2;
 }
 
 @media screen and (max-width: 700px) {
