--- a/src/components/About/AboutAccordion.css
+++ b/src/components/About/AboutAccordion.css
@@ -19,7 +19,7 @@ h1 {
   max-width: 400px;
   margin: 2rem auto;
   margin-top: 50px;
-  border-left: 2px solid #f2ffb2;
+  border-left: 2px solid #F05A28;
   margin-bottom: 50px;
   padding: 25px;
   margin-left: -35px;
