updated contact page styling. changed font colors and button color and positioning

--- a/src/components/About/AboutPage.css
+++ b/src/components/About/AboutPage.css
@@ -1,9 +1,7 @@
-body {
-  background-color: #03a678;
-}
+
 
 .greenFlower {
-  /* flip vertically */
-  transform: rotateY(180deg);
+  /* flip both */
+  transform: rotateX(180deg) rotateY(180deg);
 }
 
